# zaga-client-app

./: .gitignore  CMakeLists.txt  README.md  build-release.ps1  zaga.iss
docs/: BUILD.md  CONNECTIVITY.md  DEPLOY.md  FUNCTIONALITY.md  INSTALL.md
src/app/: Resource.h  Zaga.rc  ZagaApp.cpp
src/config/: DeviceConfig.cpp  DeviceConfig.h
src/core/: Base32.cpp  Base32.h  DeviceState.h  EnrollCodec.cpp  EnrollCodec.h  Sha256Hmac.cpp  Sha256Hmac.h  TokenCodec.cpp  TokenCodec.h  Verifier.cpp  Verifier.h
src/gate/: LockGate.cpp
src/installer/: Installer.cpp
src/net/: HttpClient.cpp  HttpClient.h  Json.cpp  Json.h  PortalClient.cpp  PortalClient.h
src/provider/: Dll.cpp  Fields.h  Guid.h  LockGate.cpp  LockGate.h  Module.h  Provider.rc  Resource.h  ZagaCredential.cpp  ZagaCredential.h  ZagaProvider.cpp  ZagaProvider.h  exports.def
src/store/: DataProtection.cpp  DataProtection.h  LocalStore.cpp  LocalStore.h  ProvisioningBundle.cpp  ProvisioningBundle.h
src/sys/: HardwareInfo.cpp  HardwareInfo.h
tests/: bundle_tests.cpp  config_tests.cpp  enroll_codec_tests.cpp  hardware_tests.cpp  json_tests.cpp  net_host.cpp  offline_e2e.cpp  provider_host.cpp  store_tests.cpp  test_main.cpp
tools/: cleanup-legacy.ps1
